--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,12 @@ grpcio==1.57.0
 h5py==3.8.0
 idna==3.4
 joblib==1.3.2
-keras==2.13.1
+# keras==2.13.1
 libclang==16.0.6
 Markdown==3.4.4
 MarkupSafe==2.1.3
 nltk==3.8.1
-numpy==1.24.3
+# numpy==1.24.3
 oauthlib==3.2.2
 opt-einsum==3.3.0
 package-name==0.1
@@ -32,12 +32,12 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-intel==2.13.0
-tensorflow-io-gcs-filesystem==0.31.0
+# tensorboard==2.13.0
+# tensorboard-data-server==0.7.1
+# tensorflow==2.13.0
+# tensorflow-estimator==2.13.0
+# tensorflow-intel==2.13.0
+# tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 tqdm==4.66.1
 typing_extensions==4.5.0
