--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,11 @@ google-auth==2.22.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.57.0
+gunicorn
 h5py==3.8.0
 idna==3.4
 joblib==1.3.2
-keras==2.13.1
+keras
 libclang==16.0.6
 Markdown==3.4.4
 MarkupSafe==2.1.3
@@ -44,4 +45,3 @@ typing_extensions==4.5.0
 urllib3==1.26.16
 Werkzeug
 wrapt==1.15.0
-gunicorn
