--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.57.0
 gunicorn
-h5py==3.8.0
+h5py
 idna==3.4
 joblib==1.3.2
 keras
@@ -20,7 +20,7 @@ libclang==16.0.6
 Markdown==3.4.4
 MarkupSafe==2.1.3
 nltk==3.8.1
-numpy==1.24.3
+numpy
 oauthlib==3.2.2
 opt-einsum==3.3.0
 package-name==0.1
