--- a/requirements.txt
+++ b/requirements.txt
@@ -33,15 +33,15 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-intel==2.13.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-tqdm==4.66.1
-typing_extensions==4.5.0
-urllib3==1.26.16
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-estimator
+tensorflow-intel
+tensorflow-io-gcs-filesystem
+termcolor
+tqdm
+typing_extensions
+urllib3
 Werkzeug
-wrapt==1.15.0
+wrapt
