--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
+django
 flatbuffers==23.5.26
 gast==0.4.0
 google-auth==2.22.0
