--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ oauthlib==3.2.2
 opt-einsum==3.3.0
 package-name==0.1
 packaging==23.1
-pil
+pillow
 protobuf==4.24.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
